fix(security): mitigated command injection in OAuth browser launch
Installed the `open` package and refactored `OAuthService.launchBrowser`
to use it instead of `node:child_process.exec`. This change eliminated
a command injection vulnerability by avoiding direct shell execution
of unescaped URLs. The `launchBrowser` method was made asynchronous,
and its call site in `authorizeWithBrowser` was updated to `await` it.

Closes #6

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "lint": "biome check .",
         "lint:fix": "biome check --write .",
         "check": "bun run typecheck && bun run lint",
+        "user:auth": "bun src/cli/auth.ts",
+        "user:sync": "bun src/cli/sync.ts",
         "docker:start": "docker compose -f docker/docker-compose.dev.yml up -d",
         "docker:stop": "docker compose -f docker/docker-compose.dev.yml down",
         "docker:clear": "docker compose -f docker/docker-compose.dev.yml down -v",
@@ -45,8 +47,10 @@
         "@keyvhq/redis": "^2.1.11",
         "@keyvhq/sqlite": "^2.1.11",
         "@ts-types/deep-partial": "^0.0.1",
+        "@types/open": "^6.2.1",
         "googleapis": "^166.0.0",
         "inflection": "^3.0.2",
+        "open": "^11.0.0",
         "pg": "^8.16.3",
         "pino": "^10.1.0",
         "reflect-metadata": "^0.2.2",
